# bloomz.cpp

./: .gitignore  CMakeLists.txt  Makefile  benchmark.sh  bloom.cpp  bloom.h  ggml.c  ggml.h  main.cpp  quantize.cpp  utils.cpp  utils.h
